cabal-version:   3.0
author:          functora
build-type:      Simple
category:        Data
copyright:       functora
description:     Custom prelude
extra-doc-files: CHANGELOG.md
license-file:    LICENSE
license:         BSD-3-Clause
maintainer:      functora@proton.me
name:            functora
synopsis:        Custom prelude
version:         0.1.0.0
homepage:
  https://github.com/functora/functora.github.io/tree/master/pub/functora

flag ghcid
  manual:  True
  default: False

common pkg
  default-language:   Haskell2010
  other-modules:      Paths_functora
  ghc-options:
    -Werror -Weverything -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-exported-signatures
    -Wno-missing-import-lists -Wno-missing-local-signatures -Wno-safe
    -Wno-unsafe -fprint-potential-instances -fwarn-tabs

  if impl(ghc >=8.10.7)
    ghc-options:
      -Wno-prepositive-qualified-module -Wno-missing-safe-haskell-mode
      -Wno-missing-kind-signatures

  default-extensions:
    NoImplicitPrelude
    AllowAmbiguousTypes
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DerivingStrategies
    DerivingVia
    EmptyCase
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedLists
    OverloadedStrings
    PackageImports
    PolyKinds
    QuantifiedConstraints
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

common pkg-prelude
  import:         pkg
  hs-source-dirs: src/prelude
  build-depends:
    , async
    , base
    , base16-bytestring
    , bytestring
    , extra
    , lens
    , microlens
    , microlens-contra
    , microlens-ghc
    , microlens-th
    , modern-uri
    , monad-chronicle
    , mtl
    , scientific
    , stm
    , syb
    , tagged
    , template-haskell
    , text
    , these
    , these-lens
    , time
    , transformers
    , unbounded-delays
    , universum
    , unliftio
    , witch-mini
    , with-utf8

common pkg-qr
  import:         pkg
  hs-source-dirs: src/qr
  build-depends:
    , base
    , base64-bytestring
    , bmp
    , bytestring
    , qrcode-core
    , text
    , vector

common pkg-aes
  import:         pkg
  hs-source-dirs: src/aes
  build-depends:
    , base
    , Crypto
    , cryptohash-sha256
    , pkcs7

common pkg-cfg
  import:         pkg
  hs-source-dirs: src/cfg
  build-depends:
    , aeson
    , base
    , bytestring
    , modern-uri
    , optparse-applicative
    , tomland

common pkg-web
  import:         pkg
  hs-source-dirs: src/web
  build-depends:
    , base
    , bytestring
    , http-client
    , http-client-tls
    , http-types
    , modern-uri
    , streaming-commons
    , yesod-core

common pkg-sql
  import:         pkg
  hs-source-dirs: src/sql
  build-depends:
    , base
    , esqueleto
    , modern-uri
    , monad-logger
    , persistent
    , resource-pool
    , uuid

common pkg-log
  import:         pkg
  hs-source-dirs: src/log
  build-depends:
    , base
    , katip
    , template-haskell
    , text

library
  import:          pkg-prelude
  exposed-modules:
    Functora.Prelude
    Functora.PreludeOrphan

library qr
  import:          pkg-qr
  build-depends:   functora
  exposed:         True
  visibility:      public
  exposed-modules: Functora.Qr

library aes
  import:          pkg-aes
  build-depends:   functora
  exposed:         True
  visibility:      public
  exposed-modules: Functora.Aes

library cfg
  import:          pkg-cfg
  build-depends:   functora
  exposed:         True
  visibility:      public
  exposed-modules:
    Functora.Cfg
    Functora.CfgOrphan

library web
  import:          pkg-web
  build-depends:   functora
  exposed:         True
  visibility:      public
  exposed-modules:
    Functora.Web
    Functora.WebOrphan

library sql
  import:          pkg-sql
  build-depends:   functora
  exposed:         True
  visibility:      public
  exposed-modules:
    Functora.Sql
    Functora.SqlOrphan

library log
  import:          pkg-log
  build-depends:   functora
  exposed:         True
  visibility:      public
  exposed-modules:
    Functora.Log
    Functora.LogOrphan

test-suite functora-test
  import:         pkg
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  build-depends:
    , base
    , bytestring
    , hspec
    , modern-uri
    , qrcode-core
    , random
    , text
    , universum

  other-modules:
    Functora.AesSpec
    Functora.CfgSpec
    Functora.PreludeSpec
    Functora.QrSpec

  if flag(ghcid)
    import:
      pkg-prelude, pkg-qr, pkg-aes, pkg-cfg, pkg-web, pkg-sql, pkg-log

    ghc-options:   -Wno-unused-packages
    other-modules:
      Functora.Aes
      Functora.Cfg
      Functora.CfgOrphan
      Functora.Log
      Functora.LogOrphan
      Functora.Prelude
      Functora.PreludeOrphan
      Functora.Qr
      Functora.Sql
      Functora.SqlOrphan
      Functora.Web
      Functora.WebOrphan

  else
    build-depends:
      , aes
      , cfg
      , functora
      , qr
