cabal-version:   3.0
author:          functora
build-type:      Simple
category:        Data
copyright:       functora
description:     Custom prelude
extra-doc-files: CHANGELOG.md
license-file:    LICENSE
license:         BSD-3-Clause
maintainer:      functora@proton.me
name:            functora
synopsis:        Custom prelude
version:         0.1.0.0
homepage:
  https://github.com/functora/functora.github.io/tree/master/pub/functora

flag ghcid
  manual:  True
  default: False

common pkg
  default-language:   Haskell2010
  other-modules:      Paths_functora
  ghc-options:
    -Werror -Weverything -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-exported-signatures
    -Wno-missing-import-lists -Wno-missing-local-signatures -Wno-safe
    -Wno-unsafe -fprint-potential-instances -fwarn-tabs

  if impl(ghc >=8.10.7)
    ghc-options:
      -Wno-prepositive-qualified-module -Wno-missing-safe-haskell-mode

  if impl(ghc >8.10.7)
    ghc-options: -Wno-missing-kind-signatures

  default-extensions:
    AllowAmbiguousTypes
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DerivingStrategies
    DerivingVia
    EmptyCase
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NumericUnderscores
    OverloadedLabels
    OverloadedLists
    OverloadedStrings
    PackageImports
    PolyKinds
    QuantifiedConstraints
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

common pkg-prelude
  import:         pkg
  hs-source-dirs: src/prelude
  build-depends:
    , async
    , base
    , base16-bytestring
    , base58-bytestring
    , bytestring
    , containers
    , cryptohash-sha256
    , extra
    , generic-lens
    , generics-sop
    , lens
    , microlens
    , microlens-contra
    , microlens-ghc
    , microlens-th
    , modern-uri
    , monad-chronicle
    , random
    , safe-exceptions
    , scientific
    , stm
    , syb
    , tagged
    , template-haskell
    , text
    , th-lift-instances
    , these
    , these-lens
    , time
    , unbounded-delays
    , uniplate
    , universum
    , unliftio
    , uuid
    , witch-mini
    , with-utf8

common pkg-qr
  import:         pkg
  hs-source-dirs: src/qr
  build-depends:
    , base
    , base64-bytestring
    , bmp
    , bytestring
    , qrcode-core
    , text
    , vector

common pkg-aes
  import:         pkg
  hs-source-dirs: src/aes
  build-depends:
    , base
    , Crypto
    , cryptohash-sha256
    , pkcs7

common pkg-cfg
  import:         pkg
  hs-source-dirs: src/cfg
  build-depends:
    , aeson
    , base
    , bytestring
    , modern-uri
    , optparse-applicative
    , tomland

common pkg-web
  import:         pkg
  hs-source-dirs: src/web
  build-depends:
    , base
    , modern-uri
    , network-uri

  if !impl(ghcjs)
    build-depends:
      , bytestring
      , http-client
      , http-client-tls
      , http-types
      , streaming-commons
      , yesod-core

  else
    build-depends: ghcjs-base

common pkg-sql
  import:         pkg
  hs-source-dirs: src/sql
  build-depends:
    , base
    , esqueleto
    , modern-uri
    , monad-logger
    , money
    , persistent
    , resource-pool
    , uuid

common pkg-money
  import:         pkg
  hs-source-dirs: src/money
  build-depends:
    , aeson-combinators
    , base
    , cfg
    , tags
    , template-haskell
    , text

common pkg-rates
  import:         pkg
  hs-source-dirs: src/rates
  build-depends:
    , aeson-combinators
    , base
    , cfg
    , containers
    , modern-uri
    , money
    , web

common pkg-tags
  import:         pkg
  hs-source-dirs: src/tags
  build-depends:
    , base
    , lift-type
    , singlethongs
    , tagged
    , template-haskell
    , type-level-sets

library
  import:          pkg-prelude
  exposed-modules:
    Functora.Prelude
    Functora.PreludeOrphan
    Functora.Soplate

library qr
  import:          pkg-qr
  build-depends:   functora
  exposed:         True
  visibility:      public
  exposed-modules: Functora.Qr

library aes
  import:          pkg-aes
  build-depends:   functora
  exposed:         True
  visibility:      public
  exposed-modules: Functora.Aes

library cfg
  import:          pkg-cfg
  build-depends:   functora
  exposed:         True
  visibility:      public
  exposed-modules:
    Functora.Cfg
    Functora.CfgOrphan

library web
  import:          pkg-web
  build-depends:   functora
  exposed:         True
  visibility:      public
  exposed-modules:
    Functora.Web
    Functora.WebOrphan

library sql
  import:          pkg-sql
  build-depends:   functora
  exposed:         True
  visibility:      public
  exposed-modules:
    Functora.Sql
    Functora.SqlOrphan

library money
  import:          pkg-money
  build-depends:   functora
  exposed:         True
  visibility:      public
  exposed-modules:
    Functora.Money
    Functora.MoneyFgpt
    Functora.MoneySing

library rates
  import:          pkg-rates
  build-depends:   functora
  exposed:         True
  visibility:      public
  exposed-modules: Functora.Rates

library tags
  import:          pkg-tags
  exposed:         True
  visibility:      public
  exposed-modules: Functora.Tags
  other-modules:
    Functora.TagsFamily
    Functora.TagsOrphan

test-suite functora-test
  import:         pkg
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: src/test
  build-depends:
    , base
    , bytestring
    , containers
    , hspec
    , modern-uri
    , qrcode-core
    , QuickCheck
    , text
    , universum

  other-modules:
    Functora.AesSpec
    Functora.CfgSpec
    Functora.PreludeSpec
    Functora.QrSpec
    Functora.RatesSpec
    Functora.Tags.TestFgpt
    Functora.Tags.TestSing
    Functora.TagsSpec

  if flag(ghcid)
    import:
      pkg-prelude, pkg-qr, pkg-aes,
      pkg-cfg, pkg-web, pkg-sql,
      pkg-money, pkg-rates, pkg-tags

    ghc-options:   -Wno-unused-packages
    other-modules:
      Functora.Aes
      Functora.Cfg
      Functora.CfgOrphan
      Functora.Money
      Functora.MoneyFgpt
      Functora.MoneySing
      Functora.Prelude
      Functora.PreludeOrphan
      Functora.Qr
      Functora.Rates
      Functora.Soplate
      Functora.Sql
      Functora.SqlOrphan
      Functora.Tags
      Functora.TagsFamily
      Functora.TagsOrphan
      Functora.Web
      Functora.WebOrphan

  else
    build-depends:
      , aes
      , cfg
      , functora
      , money
      , qr
      , rates
      , tags
