cabal-version:   3.0
author:          functora
build-type:      Simple
category:        Data
copyright:       functora
description:     Custom prelude
extra-doc-files: CHANGELOG.md
license-file:    LICENSE
license:         BSD-3-Clause
maintainer:      functora@proton.me
name:            functora
synopsis:        Custom prelude
version:         0.1.0.0
homepage:
  https://github.com/functora/functora.github.io/tree/master/pub/functora

flag ghcid
  manual:  True
  default: False

common pkg
  default-language:   Haskell2010
  other-modules:      Paths_functora
  ghc-options:
    -Werror -Weverything -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-exported-signatures
    -Wno-missing-import-lists -Wno-missing-local-signatures -Wno-safe
    -Wno-unsafe -fprint-potential-instances -fwarn-tabs

  if impl(ghc >=8.10.7)
    ghc-options:
      -Wno-prepositive-qualified-module -Wno-missing-safe-haskell-mode

  if impl(ghc >8.10.7)
    ghc-options: -Wno-missing-kind-signatures

  default-extensions:
    AllowAmbiguousTypes
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DerivingStrategies
    DerivingVia
    EmptyCase
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NumericUnderscores
    OverloadedLabels
    OverloadedLists
    OverloadedStrings
    PackageImports
    PolyKinds
    QuantifiedConstraints
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

common exe
  ld-options:  -fuse-ld=gold
  ghc-options:
    -O2 -optc-O3 -funfolding-use-threshold=16 -threaded -rtsopts
    -with-rtsopts=-N -with-rtsopts=-T -optl-fuse-ld=gold

common pkg-prelude
  import:         pkg
  hs-source-dirs: src/prelude
  build-depends:
    , async
    , base
    , base16-bytestring
    , base58-bytestring
    , binary
    , bytestring
    , containers
    , Crypto
    , extra
    , generic-lens
    , lens
    , microlens
    , microlens-contra
    , microlens-ghc
    , microlens-th
    , modern-uri
    , random
    , safe-exceptions
    , scientific
    , stm
    , syb
    , tagged
    , template-haskell
    , text
    , th-lift-instances
    , time
    , transformers
    , unbounded-delays
    , uniplate
    , universum
    , unliftio
    , witch-mini
    , with-utf8

common pkg-qr
  import:         pkg
  hs-source-dirs: src/qr
  build-depends:
    , base
    , base64-bytestring
    , bmp
    , bytestring
    , qrcode-core
    , text
    , vector

common pkg-aes
  import:         pkg
  hs-source-dirs: src/aes
  build-depends:
    , base
    , cfg
    , Crypto
    , pkcs7

common pkg-cfg
  import:         pkg
  hs-source-dirs: src/cfg
  build-depends:
    , aeson
    , base
    , binary
    , binary-instances
    , bytestring
    , modern-uri
    , optparse-applicative
    , tomland

common pkg-web
  import:         pkg
  hs-source-dirs: src/web
  build-depends:
    , base
    , http-types
    , modern-uri
    , network-uri

  if impl(ghcjs)
    build-depends: ghcjs-base

  if os(wasi)
    build-depends:
      , extism-pdk
      , ghcjs-dom
      , http-media
      , servant-jsaddle

  if !(impl(ghcjs) || os(wasi))
    build-depends:
      , bytestring
      , http-client
      , http-client-tls
      , streaming-commons

common pkg-sql
  import:         pkg
  hs-source-dirs: src/sql
  build-depends:
    , base
    , esqueleto      >=3.2.0
    , modern-uri
    , monad-logger
    , money
    , persistent
    , resource-pool
    , uuid           >=1.3

common pkg-money
  import:         pkg
  hs-source-dirs: src/money
  build-depends:
    , aeson-combinators
    , base
    , cfg
    , tags
    , template-haskell
    , text

common pkg-rates
  import:         pkg
  hs-source-dirs: src/rates
  build-depends:
    , aeson-combinators
    , base
    , cfg
    , containers
    , modern-uri
    , money
    , web

common pkg-tags
  import:         pkg
  hs-source-dirs: src/tags
  build-depends:
    , base
    , lift-type
    , singlethongs
    , tagged
    , template-haskell
    , type-level-sets

common pkg-soplate
  import:         pkg
  hs-source-dirs: src/soplate
  build-depends:
    , base
    , bytestring
    , generics-sop

common pkg-elm2miso
  import:         pkg
  hs-source-dirs: src/elm2miso
  build-depends:
    , base
    , regex-compat

common pkg-bolt11
  import:         pkg
  hs-source-dirs: src/bolt11
  build-depends:
    , aeson
    , array
    , attoparsec
    , base
    , base16-bytestring
    , bech32
    , bytestring
    , text

library
  import:          pkg-prelude
  exposed-modules:
    Functora.Prelude
    Functora.PreludeOrphan

library qr
  import:          pkg-qr
  build-depends:   functora
  exposed:         True
  visibility:      public
  exposed-modules:
    Functora.Qr
    Functora.QrOrphan

library aes
  import:          pkg-aes
  build-depends:   functora
  exposed:         True
  visibility:      public
  exposed-modules:
    Functora.Aes
    Functora.AesOrphan

library cfg
  import:          pkg-cfg
  build-depends:   functora
  exposed:         True
  visibility:      public
  exposed-modules:
    Functora.Cfg
    Functora.CfgOrphan

library web
  import:          pkg-web
  build-depends:   functora
  exposed:         True
  visibility:      public
  exposed-modules:
    Functora.Web
    Functora.WebOrphan

library sql
  import:          pkg-sql
  build-depends:   functora
  exposed:         True
  visibility:      public
  exposed-modules:
    Functora.Sql
    Functora.SqlOrphan

library money
  import:          pkg-money
  build-depends:   functora
  exposed:         True
  visibility:      public
  exposed-modules:
    Functora.Money
    Functora.MoneySing

library rates
  import:          pkg-rates
  build-depends:   functora
  exposed:         True
  visibility:      public
  exposed-modules: Functora.Rates

library tags
  import:          pkg-tags
  exposed:         True
  visibility:      public
  exposed-modules: Functora.Tags
  other-modules:
    Functora.TagsFamily
    Functora.TagsOrphan

library soplate
  import:          pkg-soplate
  build-depends:   functora
  exposed:         True
  visibility:      public
  exposed-modules: Functora.Soplate

library elm2miso-lib
  import:          pkg-elm2miso
  exposed:         True
  visibility:      public
  exposed-modules: Functora.Elm2Miso

library bolt11
  import:          pkg-bolt11
  exposed:         True
  visibility:      public
  exposed-modules:
    Functora.Bolt11
    Functora.Denomination

executable elm2miso
  import:        pkg-elm2miso, exe
  main-is:       Main.hs
  other-modules: Functora.Elm2Miso

test-suite functora-test
  import:         pkg
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: src/test
  build-depends:
    , base
    , base16-bytestring
    , bytestring
    , containers
    , Crypto
    , cryptohash-sha256
    , hspec
    , modern-uri
    , qrcode-core
    , QuickCheck
    , quickcheck-instances
    , string-qq
    , text
    , universum

  other-modules:
    Functora.AesSpec
    Functora.Bolt11Spec
    Functora.CfgSpec
    Functora.Elm2MisoSpec
    Functora.PreludeSpec
    Functora.QrSpec
    Functora.RatesSpec
    Functora.Tags.TestFgpt
    Functora.Tags.TestSing
    Functora.TagsSpec

  if flag(ghcid)
    import:
      pkg-prelude, pkg-qr, pkg-aes,
      pkg-cfg, pkg-web, pkg-sql,
      pkg-money, pkg-rates, pkg-tags,
      pkg-soplate, pkg-elm2miso, pkg-bolt11

    ghc-options:   -Wno-unused-packages
    other-modules:
      Functora.Aes
      Functora.AesOrphan
      Functora.Bolt11
      Functora.Cfg
      Functora.CfgOrphan
      Functora.Denomination
      Functora.Elm2Miso
      Functora.Money
      Functora.MoneySing
      Functora.Prelude
      Functora.PreludeOrphan
      Functora.Qr
      Functora.QrOrphan
      Functora.Rates
      Functora.Soplate
      Functora.Sql
      Functora.SqlOrphan
      Functora.Tags
      Functora.TagsFamily
      Functora.TagsOrphan
      Functora.Web
      Functora.WebOrphan

  else
    build-depends:
      , aes
      , bolt11
      , cfg
      , elm2miso-lib
      , functora
      , money
      , qr
      , rates
      , soplate
      , tags
      , web
