[package]
name = "cryptonote"
license = "MIT"
version = "0.1.7"
authors = ["Functora <functora@proton.me>"]
edition = "2021"

[dependencies]
dioxus = { version = "=0.7.2", features = ["html", "router"] }
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.22"

getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_more = { version = "2.1.0", features = ["display"] }
urlencoding = "2.1.3"
sys-locale = "0.3.2"
web-sys = { version = "0.3", features = [
  "Window",
  "Location",
  "Navigator",
  "Clipboard",
] }
either = { version = "1.15.0", features = ["serde"] }
thiserror = "2.0.18"
tracing = "0.1.43"
enum-iterator = "2.3.0"
functora = "0.1.1"
pulldown-cmark = "0.13"
ammonia = "4.1"
dioxus-free-icons = { version = "0.10.0", features = [
  "font-awesome-brands",
  "font-awesome-solid",
] }
dioxus-sdk = { version = "0.7.0", features = ["storage"] }
tap = "1.0.1"
rxing = { version = "0.9.0", default-features = false, features = [
  "wasm_support",
  "encoding_rs",
  "decoders",
  "encoders",
  "qrcode",
] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
