[package]
name = "functora-cfg"
license = "MIT"
version = "0.1.2"
edition = "2024"
keywords = ["config", "configuration", "settings", "env", "environment"]
categories = ["config"]
repository = "https://github.com/functora/functora.github.io/tree/master/rust/functora-cfg"
documentation = "https://docs.rs/functora-cfg"
description = "A Rust library that merges configuration values from multiple sources into a single typed value."

[dependencies]
clap = "4.5.50"
config = "0.15.18"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"

[dev-dependencies]
clap = { version = "4.5.50", features = ["derive"] }
functor_derive = "0.4.3"
serial_test = "3.2.0"
temp-env = "0.3.6"
tempfile = "3.23.0"
