[package]
name = "functora-tagged"
license = "MIT"
version = "0.1.0"
edition = "2024"
keywords = ["derive", "tagged", "newtype", "refinement"]
categories = ["data-structures", "rust-patterns"]
repository = "https://github.com/functora/functora.github.io/tree/master/rust/functora-tagged"
documentation = "https://docs.rs/functora-tagged"
description = "Lightweight, macro-free newtypes with refinement and derived traits."

[dependencies]
derive_more = { version = "2.0.1", features = ["display"] }
diesel = { version = "2.3.3", optional = true }
serde = { version = "1.0.228", optional = true }

[features]
default = []
diesel = ["dep:diesel"]
serde = ["dep:serde"]

[dev-dependencies]
diesel = { version = "2.3.3", features = ["sqlite"] }
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
num-traits = "0.2.19"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
